@@ -2,7 +2,7 @@
 # Project configuration for Pylint static code checker.
 # Manpage: pylint(1)
 
-# Copyright © 2010–2011 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2010–2012 Ben Finney <ben+python@benfinney.id.au>
 # This is free software. See the end of this file for information.
 
 [MASTER]
