@@ -3,7 +3,7 @@
 # test/__init__.py
 # Part of ‘python-daemon’, an implementation of PEP 3143.
 #
-# Copyright © 2008–2011 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2008–2012 Ben Finney <ben+python@benfinney.id.au>
 #
 # This is free software: you may copy, modify, and/or distribute this work
 # under the terms of the Apache License, version 2.0 as published by the
